--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,9 +24,10 @@ server.error.include-exception=false
 
 # Logging
 logging.level.org.springframework=INFO
-logging.level.com.codeshare.platform=DEBUG
+logging.level.com.codeshare.platform=INFO
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.com.codeshare.platform.security=DEBUG
 
 # JWT Configuration
 app.jwt.secret=verylongandsecurekeyusedforhashingthesignature0123456789
