push half worked

--- a/.codeshare/config
+++ b/.codeshare/config
@@ -1,6 +1,6 @@
 #CodeShare Repository Configuration
-#Thu Apr 10 21:49:43 EDT 2025
+#Fri Apr 11 20:01:21 EDT 2025
 branch=master
-projectId=12
-projectName=test
+projectId=14
+projectName=pusherror
 remoteUrl=http\://localhost\:8080/api
