--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'org.openjfx:javafx-swing:17'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    compileOnly 'org.projectlombok:lombok:1.18.38' // <-- Use a specific version
+    annotationProcessor 'org.projectlombok:lombok:1.18.38' // <-- Use a specific version
 }
 
 tasks.named('test') {
