--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     compileOnly 'org.projectlombok:lombok:1.18.38' // <-- Use a specific version
     annotationProcessor 'org.projectlombok:lombok:1.18.38' // <-- Use a specific version
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 tasks.named('test') {
