--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.38' // <-- Use a specific version
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1' // Use the latest version
 }
 
 tasks.named('test') {
