View Concided to one

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,14 @@ spring.web.resources.add-mappings=true
 # Security
 spring.security.filter.order=10
 
+
+# Add these properties to your application.properties file to handle larger request sizes
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+# Increasing the Tomcat server's maximum allowed header size
+server.max-http-request-header-size=10MB
+
+# Set longer timeouts for the server
+server.tomcat.connection-timeout=60000
+spring.mvc.async.request-timeout=60000
