--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,5 @@ server.max-http-request-header-size=10MB
 # Set longer timeouts for the server
 server.tomcat.connection-timeout=60000
 spring.mvc.async.request-timeout=60000
+
+git.repositories.base-path=./git-repositories
