Front End Working

--- a/.codeshare/config
+++ b/.codeshare/config
@@ -1,6 +1,6 @@
 #CodeShare Repository Configuration
-#Mon Apr 28 00:27:20 EDT 2025
-branch=master
+#Mon Apr 28 17:53:50 EDT 2025
+branch=lala
 projectId=32
 projectName=new_project
 remoteUrl=http\://localhost\:8080/api
