--- a/.codeshare/config
+++ b/.codeshare/config
@@ -1,6 +1,6 @@
 #CodeShare Repository Configuration
-#Tue Apr 29 16:58:42 EDT 2025
-branch=master
-projectId=32
-projectName=new_project
+#Mon May 12 20:43:44 EDT 2025
+branch=main
+projectId=43
+projectName=code_sharing_platform
 remoteUrl=http\://localhost\:8080/api
